# teste_streamlit

./:  Consolidacao.csv  app.py  app2.py  app3.py  app4.py  app5.py  app6.py  app_acomp.py  app_acompanhamento.py  pyproject.toml
