[tool.poetry]
name = "live-streamlit"
version = "0.1.0"
description = ""
authors = ["Fasri <106215404+Fasri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
fpdf = "^1.7.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
